# RLP-Project

./: .gitignore  LICENSE  README.md  UPDATER_SETUP.ps1  index.html  latest.json  launch.json  package-lock.json  package.json  release.ps1  riot.txt  vite.config.js
docs/: index.html  riot.txt
src/: App.css  App.jsx  main.jsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: champ_select.rs  lib.rs  main.rs
src/components/: champ-select-tab.jsx  champion-meta-tab.jsx  constants.js  live-game-tab.jsx  masteries-tab.jsx  match-history-tab.jsx  meta-tab.jsx  profile-tab.jsx  utils.js
src/components/ui/: UpdateBanner.jsx  badge.jsx  button.jsx  card.jsx  input.jsx  progress.jsx  tabs.jsx
website/: index.html
~/.tauri/: rlp.key  rlp.key.pub
