[package]
name = "rlp-project"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rlp_project_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking"] }
base64 = "0.21"
tokio = { version = "1", features = ["full"] }
scraper = "0.13"
urlencoding = "2.1.3"
chrono = "0.4.43"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
postgres-native-tls = "0.5"
native-tls = "0.2"
deadpool-postgres   = { version = "0.14", features = ["rt_tokio_1"] }
dotenvy = "0.15"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2"

