[package]
name = "rlp-project"
version = "1.1.9"
description = ""
authors = ["Akiramura"]
edition = "2021"

[lib]
name = "rlp_project_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking"] }
base64 = "0.21"
tokio = { version = "1", features = ["full"] }
scraper = "0.13"
urlencoding = "2.1.3"
chrono = "0.4.43"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
postgres-native-tls = "0.5"
native-tls = "0.2"
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }
dotenvy = "0.15"









